# BookReader

./: .gitignore  DEBUG_OUTPUT.txt  README.md  README_SHARED.md  debug_main.py  main.py  paths.py  pyproject.toml  requirements.txt  run.bat  run.ps1  run.sh  run_book.bat  run_browser.bat  run_desktop.bat  smoke_test.py  test_pdf.py  test_simple.py  version.py
.github/workflows/: build-android-apk.yml  build-android.yml
android/: README.md  build.gradle  gradle.properties  settings.gradle
android-app/: .gitignore  README.md  build.gradle
android-app/app/: build.gradle
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/com/bookreader/: BookAdapter.kt  MainActivity.kt  ReaderActivity.kt
android-app/app/src/main/res/layout/: activity_main.xml  activity_reader.xml  item_book.xml
android-app/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/bookreader/: MainActivity.kt  ReaderActivity.kt
android/app/src/main/res/layout/: activity_main.xml  activity_reader.xml
android/app/src/main/res/values/: strings.xml  styles.xml
core/: README.md
core/src/: __init__.py
reader/: __init__.py  base.py  epub_reader.py  pdf_reader.py  txt_reader.py
ui/: __init__.py  book_viewer.py  bookshelf.py  edge_tts_lite.py  log_window.py  tts.py
