[project]
name = "bookreader"
version = "1.0.0"
description = "A simple and elegant eBook reader"

[tool.flet]
product = "BookReader"
org = "com.bookreader.app"
description = "A simple and elegant eBook reader"

# Flutter dart 包依赖声明（文档说支持，但 flet 0.85.3 的 build_base.py 实际不直接读取此段）。
# flet_audio dart 包真正打包进 APK 的机制是 CI 的 --source-packages flet_audio：
#   1. 设置 SERIOUS_PYTHON_ALLOW_SOURCE_DISTRIBUTIONS 环境变量
#   2. serious-python 从 sdist（源码分发）安装 flet_audio（wheel 不含 flutter dart 子目录）
#   3. serious-python 提取 flutter/flet_audio/ dart 子目录到 flutter-packages-temp/
#   4. flet build 扫描该目录，注册到 pubspec.yaml
#   5. Flutter 编译 flet_audio dart 包 → 打包进 APK
# 保留此段仅为文档兼容（未来 flet 版本可能直接读取）。
[tool.flet.flutter.dependencies]
flet_audio = "*"

# Android 权限声明（flet build apk 会自动注入到 AndroidManifest.xml）。
# 注意：flet_audio 播放 app 私有目录（FLET_APP_STORAGE_DATA/TEMP）的 mp3 文件
# 不需要任何存储权限。READ_EXTERNAL_STORAGE 仅为兼容旧版 Android 读取用户选择的 epub。
# MANAGE_EXTERNAL_STORAGE 已移除：它是特殊权限，不在 Permissions 页面显示，
# 反而会让用户困惑；app 不需要写 /sdcard/。
[tool.flet.android.permission]
"android.permission.READ_EXTERNAL_STORAGE" = true

[build-system]
requires = ["flet"]
build-backend = "flet.build:build_backend"
